--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -37,5 +37,15 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
+
+      # Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          sarif_file: 'trivy-results.sarif'
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # Push the Docker image to Docker Hub
+      - name: Push Docker image
+        run: |
+          docker push docker.io/poonithg/my-node-app:${{ github.sha }}
