--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
 
       # Log in to Docker Hub
       - name: Log in to Docker Hub
